--- a/src/USZDashboard/Views/Home/Index.cshtml
+++ b/src/USZDashboard/Views/Home/Index.cshtml
@@ -7,9 +7,9 @@
 <link href="~/lib/angular-dashboard-framework/dist/angular-dashboard-framework.css" rel="stylesheet"/>
 <link href="~/lib/adf-widget-clock/dist/adf-widget-clock.css" rel="stylesheet"/>
 
-<script src="~/lib/angular/angular.js"></script>
 <script src="~/lib/Sortable/Sortable.js"></script>
-<script src="~/lib/angular-route/angular-route.js"></script>
+<script src="~/lib/angular/angular.js"></script>
+<script src="~/lib/angular-route/angular-route.min.js"></script>
 <script src="~/lib/angular-resource/angular-resource.js"></script>
 <script src="~/lib/angular-bootstrap/ui-bootstrap.js"></script>
 <script src="~/lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
@@ -23,29 +23,32 @@
 <script src="~/app.js"></script>
 
 <div ng-app ="DashboardAdmin">
-    <div ng-controller="DashboardController">
+    <div>
 
-        dashboard title {{dashboard.title}}
-        <br />
-        dashboard collapsible {{dashboard.collapsible}}
-        <br />
-
-        dashboard structure {{dashboard.structure}}
-        <br />
-
-        dashboard maximizable {{dashboard.maximizable}}
-        <br />
-
-        <div uib-collapse="navCollapsed" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li>
-                    <a href="#/sample">Sample</a>
-                </li>
-            </ul>
-        </div><!--/.nav-collapse -->
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <div class="container" ng-controller="DashboardController as nav">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" ng-click="nav.toggleNav()">
+                        <span class="sr-only">Toggle navigation</span>
+                    </button>
+                    <a class="navbar-brand" href="#">ADF Dynamic Sample</a>
+                </div>
+                <div uib-collapse="nav.navCollapsed" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li ng-repeat="item in nav.items | orderBy: title">
+                            <p style="color: white; display: none">DashboardId is {{item.dashboardId}}</p>
+                            <a ng-href="#/samples/{{item.dashboardId}}">{{item.title}}</a>
+                        </li>
+                        <li>
+                            <a style="cursor: pointer;" ng-click="nav.create()">Create</a>
+                        </li>
+                    </ul>
+                </div><!--/.nav-collapse -->
+            </div>
+        </div>
 
         <div class="container">
-            <div ng-view />
+            <ng-view />
         </div>
         
         @*<adf-dashboard name="{{dashboard.name}}" collapsible="{{dashboard.collapsible}}" structure="{{dashboard.structure}}" 
