--- a/src/USZDashboard/Views/Home/Index.cshtml
+++ b/src/USZDashboard/Views/Home/Index.cshtml
@@ -36,14 +36,16 @@
                 <div uib-collapse="nav.navCollapsed" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li ng-repeat="item in nav.items | orderBy: title">
-                            <p style="color: white; display: none">DashboardId is {{item.dashboardId}}</p>
-                            <a ng-href="#/samples/{{item.dashboardId}}">{{item.title}}</a>
+                            <p style="color: white;display: none">DashboardId is {{item.id}}</p>
+                            <a ng-href="#/samples/{{item.id}}">{{item.title}}</a>
                         </li>
                         <li>
                             <a style="cursor: pointer;" ng-click="nav.create()">Create</a>
                         </li>
                     </ul>
                 </div><!--/.nav-collapse -->
+                
+                
             </div>
         </div>
 
@@ -51,6 +53,7 @@
             <ng-view />
         </div>
         
+
         @*<adf-dashboard name="{{dashboard.name}}" collapsible="{{dashboard.collapsible}}" structure="{{dashboard.structure}}" 
                        maximizable="{{dashboard.maximizable}}" categories="{{dashboard.categories}}" adf-model="model" editable="{{dashboard.editable}}"/>*@
     </div>
